--- a/evo_LSR_zero_shot.ipynb
+++ b/evo_LSR_zero_shot.ipynb
@@ -734,6 +734,8 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
+        "\n",
+        "# from https://www.nature.com/articles/s41587-022-01494-w\n",
         "lsr_df = pd.read_excel(\"lsr.xlsx\")\n",
         "lsr_df = lsr_df[~lsr_df[\"protein_ncbi_contig\"].isna()]\n",
         "lsr_df[\"protein_cds_start\"] = lsr_df[\"protein_cds_start\"].astype(int)\n",
